# InfraScope

./: README.md  pyproject.toml  telemetry_log.json  test_cpu.py  test_memory.py
agent/collectors/: base_collector.py  cpu_collector.py  disk_collector.py  memory_collector.py
agent/core/: runtime.py
agent/detectors/: base_detector.py
agent/models/: anomaly.py  snapshot.py
agent/writers/: base_writer.py  json_writer.py
docs/: architecture.md  architecture_diagram.md  module_architecture.md  runtime.md
